--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto" >
-                Olá, sou Sarah Paula, uma entusiasta da programação com 21 anos de idade. Em 2021, concluí minha formação no Instituto PROA, uma ONG que não apenas me proporcionou conhecimentos sólidos em programação, incluindo HTML, CSS, Java e MySQL, mas também moldou minha abordagem proativa e habilidades de comunicação. Após a graduação, busquei aprimorar minhas habilidades de forma independente, explorando recursos online, especialmente através de vídeos no YouTube.
+                Olá, sou Sarah Paula, uma entusiasta da programação com 21 anos de idade. Em 2021, concluí minha formação no Instituto PROA, uma ONG que não apenas me proporcionou conhecimentos sólidos em programação, incluindo HTML, CSS, Java e MySQL, mas também moldou minha abordagem proativa e habilidades de comunicação. Após a formação, busquei aprimorar minhas habilidades de forma independente, explorando recursos online, especialmente através de vídeos no YouTube.
              </p>
             <p class="apresentacao__conteudo__texto" >
                 No início de 2024, conquistei uma bolsa de estudos para um programa de desenvolvimento backend na Alura, em parceria com a Oracle. Nessa jornada, tenho mergulhado mais profundamente na lógica de programação, desenvolvimento pessoal e ampliado meu conhecimento em tecnologias como JavaScript. Além disso, estou aprimorando minhas habilidades em controle de versão usando Git e GitHub.
